--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,3 +2,20 @@
     ViewData["Title"] = "Home Page";
 }
 
+<h1>Aircrafts</h1>
+
+<input id="name-input"/>
+<button id="add-command">Add</button>
+
+@section Scripts
+{
+  <script src="~/lib/solid/rdflib.min.js"></script>
+  <script src="~/js/rdf.js"></script>
+  
+<script>
+    $('#add-command').click(function()
+    {
+        //window.alert("AA");
+    });
+</script>
+}
