--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
   </environment>
+
+  @RenderSection("Styles", required: false)
 </head>
 
 <body>
@@ -31,16 +33,16 @@
 
   <environment include="Development">
     <script src="~/lib/jquery/dist/jquery.js"></script>
-    <script src="~/lib/popper.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="~/lib/solid/solid-auth-client.bundle.js"></script>
+    <script src="~/lib/popper.js/dist/umd/popper.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <script src="~/lib/solid-auth-client/dist-lib/solid-auth-client.bundle.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
   </environment>
   <environment exclude="Development">
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/popper.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="~/lib/solid/solid-auth-client.bundle.js"></script>
+    <script src="~/lib/popper.js/dist/umd/popper.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/lib/solid-auth-client/dist-lib/solid-auth-client.bundle.js"></script>
     <script src="~/js/site.min.js" asp-append-version="true"></script>
   </environment>
 
