--- a/Views/Shared/_Navigation.cshtml
+++ b/Views/Shared/_Navigation.cshtml
@@ -1,32 +1,30 @@
-<nav class="navbar navbar-inverse navbar-fixed-top">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">SolidRC</a>
-    </div>
-    <div class="navbar-collapse collapse">
-      <ul class="nav navbar-nav navbar-right">
-        <li id="login-container">
-          <a id="login-button" href="#"><span class="glyphicon glyphicon-log-in"></span> Log in</a>
-        </li>
-        <li id="logout-container">
-          <p class="navbar-text">
-            <span id="user-badge" class="glyphicon glyphicon-user" data-toggle="tooltip" data-placement="bottom"></span>
-            &nbsp;
-            <a id="logout-button" href="#"><span class="glyphicon glyphicon-log-out"></span> Log out</a>
-          </p>
-        </li>
-      </ul>
-      <ul class="nav navbar-nav">
-        <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-        <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-        <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-      </ul>
-    </div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">SolidRC</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Logbook</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Models">Models</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Locations">Locations</a>
+      </li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <li id="login-container">
+        <a id="login-button" href="#"><span class="glyphicon glyphicon-log-in"></span> Log in</a>
+      </li>
+      <li id="logout-container">
+        <span id="user-badge" class="navbar-text"" data-toggle="tooltip" data-placement="bottom">USER</span>
+        &nbsp;
+        <a id="logout-button" href="#">Log out</a>
+      </li>
+    </ul>
   </div>
 </nav>
