--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -52,9 +52,22 @@
             <div class="form-group">
               <label for="selectedModel">Model</label>
               <select v-model="selectedModel" id="selectedModel">
-                <option>None</option>
-                <option>Model A</option>
+                <option value="">None</option>
+                <option value="http://blah.blah/mosquito">Mosquito</option>
+                <option value="http://blah.blah/chipmunk">Chipmunk</option>
               </select>
+            </div>
+            <div class="form-group">
+              <label for="selectedLocation">Location</label>
+              <select v-model="selectedLocation" id="selectedLocation">
+                <option>None</option>
+                <option>Kildedal</option>
+                <option>Værløse</option>
+              </select>
+            </div>
+            <div class="form-group">
+              <label for="selectedDuration">Duration</label>
+              <input v-model="selectedDuration" id="selectedDuration">
             </div>
           </form>
         </div>
@@ -75,5 +88,7 @@
   <script src="~/lib/moment/min/moment.min.js"></script>
   <script src="~/lib/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
   <script src="~/lib/vue/dist/vue.min.js"></script>
+  <script src="~/js/namespaces.js"></script>
   <script src="~/js/logbook.js"></script>
+  <script src="~/js/logbookRepository.js"></script>
 }
