--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -89,6 +89,7 @@
   <script src="~/lib/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
   <script src="~/lib/vue/dist/vue.min.js"></script>
   <script src="~/js/namespaces.js"></script>
+  <script src="~/js/genericRepository.js"></script>
   <script src="~/js/logbook.js"></script>
   <script src="~/js/logbookRepository.js"></script>
 }
