--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -48,7 +48,7 @@
           <form>
             <div class="form-group">
               <label for="selectedDate">Date</label>
-              <input v-model="selectedDate" class="date-input" id="selectedDate">
+              <input v-model.trim="$v.selectedDate.$model" :class="status($v.selectedDate)" id="selectedDate">
             </div>
             <div class="form-group">
               <label for="selectedModel">Model</label>
@@ -66,7 +66,7 @@
             </div>
             <div class="form-group">
               <label for="selectedDuration">Duration</label>
-              <input v-model="selectedDuration" id="selectedDuration">
+              <input v-model="$v.selectedDuration.$model" :class="status($v.selectedDuration)" id="selectedDuration">
             </div>
           </form>
         </div>
@@ -87,6 +87,8 @@
   <script src="~/lib/moment/min/moment.min.js"></script>
   <script src="~/lib/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
   <script src="~/lib/vue/dist/vue.min.js"></script>
+  <script src="~/lib/vuelidate/dist/vuelidate.min.js"></script>
+  <script src="~/lib/vuelidate/dist/validators.min.js"></script>
   <script src="~/js/namespaces.js"></script>
   <script src="~/js/ORDFMapper.js"></script>
   <script src="~/js/logbook.js"></script>
