--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -53,8 +53,7 @@
             <div class="form-group">
               <label for="selectedModel">Model</label>
               <select v-model="selectedModel" id="selectedModel">
-                <option value="http://blah.blah/mosquito">Mosquito</option>
-                <option value="http://blah.blah/chipmunk">Chipmunk</option>
+                <option v-for="model in models" v-bind:value="model.id">{{ model.name }}</option>
               </select>
             </div>
             <div class="form-group">
@@ -91,6 +90,7 @@
   <script src="~/lib/vuelidate/dist/validators.min.js"></script>
   <script src="~/js/namespaces.js"></script>
   <script src="~/js/ORDFMapper.js"></script>
+  <script src="~/js/modelRepository.js"></script>
   <script src="~/js/logbook.js"></script>
   <script src="~/js/logbookRepository.js"></script>
 }
