Use "my" list of locations when adding log-entries.

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
 
 <body>
   <partial name="_Navigation" />
-  <partial name="_CookieConsentPartial" />
+  <!-- <partial name="_CookieConsentPartial" /> -->
 
   <div class="container body-content">
 
