--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -59,8 +59,7 @@
             <div class="form-group">
               <label for="selectedLocation">Location</label>
               <select v-model="selectedLocation" id="selectedLocation">
-                <option value="http://blah.blah/kildedal">Kildedal</option>
-                <option value="http://blah.blah/varlose">Værløse</option>
+                <option v-for="location in locations" v-bind:value="location.id">{{ location.name }}</option>
               </select>
             </div>
             <div class="form-group">
@@ -90,6 +89,7 @@
   <script src="~/lib/vuelidate/dist/validators.min.js"></script>
   <script src="~/js/namespaces.js"></script>
   <script src="~/js/ORDFMapper.js"></script>
+  <script src="~/js/locationRepository.js"></script>
   <script src="~/js/modelRepository.js"></script>
   <script src="~/js/logbook.js"></script>
   <script src="~/js/logbookRepository.js"></script>
