--- a/Views/Home/Locations.cshtml
+++ b/Views/Home/Locations.cshtml
@@ -39,6 +39,14 @@
               <label for="locationName">Name</label>
               <input v-model="$v.locationName.$model" :class="validationStatus($v.locationName)" id="locationName">
             </div>
+            <div class="form-group">
+              <input type="checkbox" id="useExternalUrl" v-model="useExternalUrl">
+              <label for="useExternalUrl">Use external location</label>
+            </div>
+            <div class="form-group" v-if="useExternalUrl">
+              <label for="externalUrl">External URL</label>
+              <input v-model="$v.externalUrl.$model" :class="validationStatus($v.externalUrl)" id="externalUrl">
+            </div>
           </form>
         </div>
 
