Adding info about failed derived values.
Making it possible to have multiple derived values (although its not really tested).

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
     <script src="~/lib/popper.js/dist/umd/popper.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
     <script src="~/lib/solid-auth-client/dist-lib/solid-auth-client.bundle.js"></script>
+    <script src="~/lib/vue/dist/vue.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
   </environment>
   <environment exclude="Development">
@@ -43,6 +44,7 @@
     <script src="~/lib/popper.js/dist/umd/popper.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/solid-auth-client/dist-lib/solid-auth-client.bundle.js"></script>
+    <script src="~/lib/vue/dist/vue.min.js"></script>
     <script src="~/js/site.min.js" asp-append-version="true"></script>
   </environment>
 
