--- a/Views/Shared/_Navigation.cshtml
+++ b/Views/Shared/_Navigation.cshtml
@@ -21,7 +21,7 @@
         <a id="login-button" href="#"><span class="glyphicon glyphicon-log-in"></span> Log in</a>
       </li>
       <li id="logout-container">
-        <span id="user-badge" class="navbar-text"" data-toggle="tooltip" data-placement="bottom">USER</span>
+        <span id="user-badge" class="navbar-text" data-toggle="tooltip" data-placement="bottom">USER</span>
         &nbsp;
         <a id="logout-button" href="#">Log out</a>
       </li>
