--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -26,8 +26,8 @@
       <tr v-for="entry in logEntries" v-bind:entry="entry" v-bind:key="entry.id">
         <td><img width="16" height="16"></td>
         <td>{{entry.date}}</td>
-        <td>{{entry.modelName}}</td>
-        <td>{{entry.locationName}}</td>
+        <td><derived-value v-bind:item="entry.modelName"/></td>
+        <td><derived-value v-bind:item="entry.locationName"/></td>
         <td>{{entry.duration}}</td>
         <td><a href="#" v-on:click="deleteEntry(entry)"><img src="~/open-iconic/svg/circle-x.svg" alt="Remove" class="grid-action"></a></td>
       </tr>
@@ -84,7 +84,6 @@
   <script src="~/lib/rdflib/dist/rdflib.min.js"></script>
   <script src="~/lib/moment/min/moment.min.js"></script>
   <script src="~/lib/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
-  <script src="~/lib/vue/dist/vue.min.js"></script>
   <script src="~/lib/vuelidate/dist/vuelidate.min.js"></script>
   <script src="~/lib/vuelidate/dist/validators.min.js"></script>
   <script src="~/js/namespaces.js"></script>
