--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -64,7 +64,7 @@
             </div>
             <div class="form-group">
               <label for="selectedDuration">Duration</label>
-              <input v-model="$v.selectedDuration.$model" :class="validationStatus($v.selectedDuration)" id="selectedDuration">
+              <input v-model="$v.selectedDuration.$model" :class="validationStatus($v.selectedDuration)" id="selectedDuration" placeholder="HH:MM:SS">
             </div>
           </form>
         </div>
