--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
     </thead>
     <tbody>
       <tr v-for="entry in logEntries" v-bind:entry="entry" v-bind:key="entry.id">
-        <td><img width="16" height="16"></td>
+        <td><img height="32" v-bind:src="entry.modelImage.value"></td>
         <td>{{entry.date}}</td>
         <td><derived-value v-bind:item="entry.modelName"/></td>
         <td><derived-value v-bind:item="entry.locationName"/></td>
@@ -90,6 +90,7 @@
   <script src="~/js/ORDFMapper.js"></script>
   <script src="~/js/locationRepository.js"></script>
   <script src="~/js/modelRepository.js"></script>
-  <script src="~/js/logbook.js"></script>
+  <script src="~/js/imageRepository.js"></script>
   <script src="~/js/logbookRepository.js"></script>
+  <script src="~/js/logbook.js"></script>
 }
