--- a/Views/Home/Models.cshtml
+++ b/Views/Home/Models.cshtml
@@ -12,11 +12,12 @@
       <tr>
         <th></th>
         <th>Name</th>
+        <th></th>
       </tr>
     </thead>
     <tbody>
       <tr v-for="model in models" v-bind:model="model" v-bind:key="model.id">
-        <td><img width="32" height="32" v-bind:src="model.image"></td>
+        <td><img width="100" height="100" v-bind:src="model.preview"></td>
         <td>{{model.name}}</td>
         <td><a href="#" v-on:click="deleteModel(model)"><img src="~/open-iconic/svg/circle-x.svg" alt="Remove" class="grid-action"></a></td>
       </tr>
@@ -43,7 +44,10 @@
             <div class="form-group">
               <label for="modelImage">Upload photo</label>
               <input type="file" id="modelImage" v-on:change="previewModelImage">
-              <div id="modelImagePreview"></div>
+              <div class="image-previewer">
+                <img id="modelImageStore">
+                <canvas id="modelImageCanvas" width="100" height="100">Your browser does not support this.</canvas>
+              </div>
             </div>
           </form>
         </div>
