--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@
     </thead>
     <tbody>
       <tr v-for="entry in logEntries" v-bind:entry="entry" v-bind:key="entry.id">
-        <td><img height="32" v-bind:src="entry.modelPreview.value"></td>
+        <td><img height="32" v-bind:src="entry.modelThumbnail.value"></td>
         <td>{{entry.date}}</td>
         <td><derived-value v-bind:item="entry.modelName"/></td>
         <td><derived-value v-bind:item="entry.locationName"/></td>
