--- a/Views/Home/Models.cshtml
+++ b/Views/Home/Models.cshtml
@@ -17,7 +17,7 @@
     </thead>
     <tbody>
       <tr v-for="model in models" v-bind:model="model" v-bind:key="model.id">
-        <td><img width="100" height="100" v-bind:src="model.preview"></td>
+        <td><img width="100" height="100" v-bind:src="model.thumbnail"></td>
         <td>{{model.name}}</td>
         <td><a href="#" v-on:click="deleteModel(model)"><img src="~/open-iconic/svg/circle-x.svg" alt="Remove" class="grid-action"></a></td>
       </tr>
