Adding spinner (waitMe) when saving model + image.

--- a/Views/Home/Models.cshtml
+++ b/Views/Home/Models.cshtml
@@ -2,6 +2,11 @@
     ViewData["Title"] = "Models";
 }
 
+@section Styles
+{
+  <link rel="stylesheet" href="~/lib-local/waitme/waitMe.min.css" />
+}
+
 <h1>Models</h1>
 
 <div id="modelsApp">
@@ -70,6 +75,7 @@
   <script src="~/lib/vue/dist/vue.min.js"></script>
   <script src="~/lib/vuelidate/dist/vuelidate.min.js"></script>
   <script src="~/lib/vuelidate/dist/validators.min.js"></script>
+  <script src="~/lib-local/waitme/waitMe.min.js"></script>
   <script src="~/js/namespaces.js"></script>
   <script src="~/js/ORDFMapper.js"></script>
   <script src="~/js/modelRepository.js"></script>
