--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -25,10 +25,10 @@
     </thead>
     <tbody>
       <tr v-for="entry in logEntries" v-bind:entry="entry" v-bind:key="entry.id">
-        <td><img height="50" v-bind:src="entry.modelThumbnail.value"></td>
+        <td><linked-image height="50" v-bind:item="entry.modelThumbnail"></td>
         <td>{{entry.date}}</td>
-        <td><derived-value v-bind:item="entry.modelName"/></td>
-        <td><derived-value v-bind:item="entry.locationName"/></td>
+        <td><linked-value v-bind:item="entry.modelName"/></td>
+        <td><linked-value v-bind:item="entry.locationName"/></td>
         <td>{{entry.duration}}</td>
         <td><a href="#" v-on:click="deleteEntry(entry)"><img src="~/open-iconic/svg/circle-x.svg" alt="Remove" class="grid-action"></a></td>
       </tr>
