--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -37,6 +37,7 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
     <script src="~/lib/solid-auth-client/dist-lib/solid-auth-client.bundle.js"></script>
     <script src="~/lib/vue/dist/vue.min.js"></script>
+    <script src="~/js/vue-addons.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
   </environment>
   <environment exclude="Development">
@@ -45,6 +46,7 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/solid-auth-client/dist-lib/solid-auth-client.bundle.js"></script>
     <script src="~/lib/vue/dist/vue.min.js"></script>
+    <script src="~/js/vue-addons.js"></script>
     <script src="~/js/site.min.js" asp-append-version="true"></script>
   </environment>
 
