Moving image loading stuff into its own class.

--- a/Views/Home/Models.cshtml
+++ b/Views/Home/Models.cshtml
@@ -83,6 +83,7 @@
   <script src="~/lib-local/waitme/waitMe.min.js"></script>
   <script src="~/js/namespaces.js"></script>
   <script src="~/js/ORDFMapper.js"></script>
+  <script src="~/js/imagePreviewer.js"></script>
   <script src="~/js/modelRepository.js"></script>
   <script src="~/js/imageRepository.js"></script>
   <script src="~/js/models.js"></script>
