Show "Please reload page" after change of photo.

--- a/Views/Home/Models.cshtml
+++ b/Views/Home/Models.cshtml
@@ -9,6 +9,10 @@
 
 <h1>Models</h1>
 
+<div class="alert alert-primary" role="alert" id="pageAlert">
+  Please reload page after changing photo.
+</div>
+
 <div id="modelsApp">
   <button type="button" class="btn btn-primary" v-on:click="editNewModel()">Add new model</button>
 
