--- a/Views/Home/Models.cshtml
+++ b/Views/Home/Models.cshtml
@@ -55,7 +55,7 @@
 
             <div class="form-group">
               <label for="modelImage">Upload photo</label>
-              <input type="file" id="modelImage" v-on:change="previewModelImage">
+              <input type="file" class="form-control-file" id="modelImage" v-on:change="previewModelImage">
               <div class="image-previewer">
                 <img id="modelImageStore">
                 <canvas id="modelImageCanvas" width="100" height="100">Your browser does not support this.</canvas>
