--- a/Views/Home/Locations.cshtml
+++ b/Views/Home/Locations.cshtml
@@ -41,8 +41,8 @@
               <label for="locationName">Name</label>
               <input v-model="$v.locationName.$model" :class="validationStatus($v.locationName)" id="locationName">
             </div>
-            <div class="form-group">
-              <input type="checkbox" id="useExternalUrl" v-model="useExternalUrl">
+            <div class="form-check">
+              <input type="checkbox" id="useExternalUrl" class="form-check-input" v-model="useExternalUrl">
               <label for="useExternalUrl">Use external location</label>
             </div>
             <div class="form-group" v-if="useExternalUrl">
