--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -62,11 +62,18 @@
                 </div>
               </div>
             </div>
-            <div class="form-group">
-              <label for="selectedModel">Model</label>
-              <select v-model="selectedModel" id="selectedModel">
-                <option v-for="model in models" v-bind:value="model.id">{{ model.name }}</option>
-              </select>
+            <div class="row">
+              <div class="col">
+                <div class="form-group">
+                  <label for="selectedModel">Model</label>
+                  <select v-model="selectedModel" id="selectedModel" v-on:change="handleModelChanged">
+                    <option v-for="model in models" v-bind:value="model.id">{{ model.name }}</option>
+                  </select>
+                </div>
+              </div>
+              <div class="col">
+                <img width="100" height="100" id="modelThumbnail">
+              </div>
             </div>
             <div class="form-group">
               <label for="selectedLocation">Location</label>
