--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -41,6 +41,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="entryDialogLabel">{{formTitle}}</h5>
+          <share-data v-if="currentEntry" v-bind:url="currentEntry.id"></share-data>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
