--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -73,7 +73,7 @@
                 </div>
               </div>
               <div class="col">
-                <img width="100" height="100" id="modelThumbnail">
+                <img width="100" height="100" id="modelThumbnail" class="img-thumbnail">
               </div>
             </div>
             <div class="form-group">
