--- a/Views/Home/Locations.cshtml
+++ b/Views/Home/Locations.cshtml
@@ -55,8 +55,8 @@
 
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-          <button v-if="formState=='add'" type="button" class="btn btn-primary" v-on:click="addLocation()">Add</button>
-          <button v-if="formState=='edit'"type="button" class="btn btn-primary" v-on:click="saveLocation()">Save</button>
+          <button v-if="formState=='add'" type="button" class="btn btn-primary" v-on:click="addLocation()" id="buttonAdd">Add</button>
+          <button v-if="formState=='edit'"type="button" class="btn btn-primary" v-on:click="saveLocation()" id="buttonSave">Save</button>
         </div>
       </div>
     </div>
