--- a/Views/Home/Locations.cshtml
+++ b/Views/Home/Locations.cshtml
@@ -7,23 +7,25 @@
 <div id="locationsApp">
   <button type="button" class="btn btn-primary" v-on:click="editNewLocation()">Add new location</button>
 
-  <table id="locations" class="table">
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr v-for="location in locations" v-bind:location="location" v-bind:key="location.id">
-        <td>{{location.name}}</td>
-        <td>
-          <a href="#" v-on:click="editLocation(location)"><img src="~/open-iconic/svg/pencil.svg" alt="Edit" class="grid-action"></a>
-          <a href="#" v-on:click="deleteLocation(location)"><img src="~/open-iconic/svg/circle-x.svg" alt="Remove" class="grid-action"></a>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+  <data-load v-bind:loading="loading">
+    <table id="locations" class="table" v-cloak>
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr v-for="location in locations" v-bind:location="location" v-bind:key="location.id">
+          <td>{{location.name}}</td>
+          <td>
+            <a href="#" v-on:click="editLocation(location)"><img src="~/open-iconic/svg/pencil.svg" alt="Edit" class="grid-action"></a>
+            <a href="#" v-on:click="deleteLocation(location)"><img src="~/open-iconic/svg/circle-x.svg" alt="Remove" class="grid-action"></a>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </data-load>
 
   <div class="modal fade" data-show="false" id="locationDialog" tabindex="-1" role="dialog" aria-labelledby="locationDialog" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
