--- a/Views/Home/Models.cshtml
+++ b/Views/Home/Models.cshtml
@@ -16,25 +16,27 @@
 <div id="modelsApp">
   <button type="button" class="btn btn-primary" v-on:click="editNewModel()">Add new model</button>
 
-  <table id="models" class="table">
-    <thead>
-      <tr>
-        <th></th>
-        <th>Name</th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr v-for="model in models" v-bind:model="model" v-bind:key="model.id">
-        <td><img width="100" height="100" v-bind:src="model.thumbnail"></td>
-        <td>{{model.name}}</td>
-        <td>
-          <a href="#" v-on:click="editModel(model)"><img src="~/open-iconic/svg/pencil.svg" alt="Edit" class="grid-action"></a>
-          <a href="#" v-on:click="deleteModel(model)"><img src="~/open-iconic/svg/circle-x.svg" alt="Remove" class="grid-action"></a>
-          </td>
-      </tr>
-    </tbody>
-  </table>
+  <data-load v-bind:loading="loading">
+    <table id="models" class="table" v-cloak>
+      <thead>
+        <tr>
+          <th></th>
+          <th>Name</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr v-for="model in models" v-bind:model="model" v-bind:key="model.id">
+          <td><img width="100" height="100" v-bind:src="model.thumbnail"></td>
+          <td>{{model.name}}</td>
+          <td>
+            <a href="#" v-on:click="editModel(model)"><img src="~/open-iconic/svg/pencil.svg" alt="Edit" class="grid-action"></a>
+            <a href="#" v-on:click="deleteModel(model)"><img src="~/open-iconic/svg/circle-x.svg" alt="Remove" class="grid-action"></a>
+            </td>
+        </tr>
+      </tbody>
+    </table>
+  </data-load>
 
   <div class="modal fade" id="modelDialog" tabindex="-1" role="dialog" aria-labelledby="addModelDialog" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
